--- a/fighting.html
+++ b/fighting.html
@@ -9,7 +9,8 @@
   canvas{background:#111;border:2px solid #fff;border-radius:6px;display:block;}
   .menu{position:absolute;top:0;left:0;width:100%;height:100%;display:flex;flex-direction:column;justify-content:center;align-items:center;gap:12px;background:rgba(0,0,0,0.85);}
   .menu button{padding:10px 20px;font-size:18px;border-radius:6px;border:1px solid #fff;background:transparent;color:#fff;cursor:pointer;}
-  .menu .points{margin-top:20px;font-size:16px;}
+  .menu .points{margin-top:10px;font-size:16px;}
+  #skinSelect{margin-top:10px;padding:5px;font-size:16px;border-radius:6px;border:1px solid #fff;background:#000;color:#fff;}
   #caseAnimation{position:absolute;top:0;left:0;width:100%;height:100%;display:none;justify-content:center;align-items:center;background:rgba(0,0,0,0.95);}
   #caseCanvas{background:#111;border:2px solid #fff;border-radius:6px;}
 </style>
@@ -21,7 +22,8 @@
   <button id="startBtn">Start Game</button>
   <button id="casesBtn">Open Case (5 points)</button>
   <div class="points" id="pointsDisplay">Points: 0</div>
-  <div class="points" id="skinDisplay">Current Skin: White</div>
+  <label for="skinSelect" class="points">Select Skin:</label>
+  <select id="skinSelect"></select>
 </div>
 
 <div id="caseAnimation">
@@ -36,7 +38,7 @@ const menu=document.getElementById('menu');
 const startBtn=document.getElementById('startBtn');
 const casesBtn=document.getElementById('casesBtn');
 const pointsDisplay=document.getElementById('pointsDisplay');
-const skinDisplay=document.getElementById('skinDisplay');
+const skinSelect=document.getElementById('skinSelect');
 const caseOverlay=document.getElementById('caseAnimation');
 const caseCanvas=document.getElementById('caseCanvas');
 const caseCtx=caseCanvas.getContext('2d');
@@ -94,17 +96,11 @@ function tick(){
   if((nextDir.x!==-dir.x||nextDir.y!==-dir.y)||snake.length===1) dir=nextDir;
   const head={x:snake[0].x+dir.x,y:snake[0].y+dir.y,color:snake[0].color};
 
-  // Wall collision
   if(head.x < 0 || head.x >= COLS || head.y < 0 || head.y >= ROWS){ gameOver(); return; }
-
-  // Self collision
   if(snake.some(s=>s.x===head.x && s.y===head.y) && !invincible){ gameOver(); return; }
-
-  // Obstacle collision
   if(obstacles.some(o=>o.x===head.x && o.y===head.y) && !invincible){ gameOver(); return; }
 
   snake.unshift(head);
-
   if(food.moving){ food.x+=food.dir; if(food.x<0||food.x>=COLS) food.dir*=-1; }
 
   if(head.x===food.x && head.y===food.y){
@@ -114,60 +110,54 @@ function tick(){
     if(Math.random()<0.1){ invincible=true; invTimer=50; }
     placeFood(); updatePoints();
   } else snake.pop();
-
   if(invincible){ invTimer--; if(invTimer<=0) invincible=false; }
   draw();
 }
 
 function draw(){
   ctx.fillStyle='#000'; ctx.fillRect(0,0,canvas.width,canvas.height);
-
-  // obstacles
-  ctx.fillStyle='#555';
-  obstacles.forEach(o=>ctx.fillRect(o.x*CELL+2,o.y*CELL+2,CELL-4,CELL-4));
-
-  // food
+  ctx.fillStyle='#555'; obstacles.forEach(o=>ctx.fillRect(o.x*CELL+2,o.y*CELL+2,CELL-4,CELL-4));
   ctx.fillStyle=invincible?'gold':food.color;
   ctx.fillRect(food.x*CELL+2,food.y*CELL+2,CELL-4,CELL-4);
-
-  // snake
   for(let i=0;i<snake.length;i++){
     const s=snake[i];
     ctx.fillStyle=i===0?currentSkin:`rgb(${220-i*10},${220-i*10},${220-i*10})`;
     ctx.fillRect(s.x*CELL+1,s.y*CELL+1,CELL-2,CELL-2);
   }
-
-  // points overlay
   ctx.fillStyle='white';
   ctx.font='16px Arial';
   ctx.fillText('Points: '+points,10,20);
-  ctx.fillText('Skin: '+currentSkin,10,40);
 }
-
-window.addEventListener('keydown',(e)=>{
-  const k=e.key;
-  if(!running && k!==' ') return;
-  if(k==='ArrowUp'||k==='w'||k==='W') nextDir={x:0,y:-1};
-  else if(k==='ArrowDown'||k==='s'||k==='S') nextDir={x:0,y:1};
-  else if(k==='ArrowLeft'||k==='a'||k==='A') nextDir={x:-1,y:0};
-  else if(k==='ArrowRight'||k==='d'||k==='D') nextDir={x:1,y:0};
-});
-
-canvas.addEventListener('click',()=>{ canvas.focus(); });
 
 function updatePoints(){ 
   pointsDisplay.textContent='Points: '+points; 
-  skinDisplay.textContent='Current Skin: '+currentSkin; 
+  updateSkinSelect();
 }
+
+function updateSkinSelect(){
+  skinSelect.innerHTML='';
+  ownedSkins.forEach(skin=>{
+    const opt=document.createElement('option');
+    opt.value=skin;
+    opt.textContent=skin.charAt(0).toUpperCase()+skin.slice(1);
+    if(skin===currentSkin) opt.selected=true;
+    skinSelect.appendChild(opt);
+  });
+}
+
+// Change skin immediately on selection
+skinSelect.addEventListener('change',(e)=>{
+  currentSkin=e.target.value;
+  draw();
+});
 
 startBtn.addEventListener('click',()=>{ startGame(); });
 
 casesBtn.addEventListener('click',()=>{
   if(points<5){ alert("Not enough points! Each case costs 5."); return; }
-  points-=5;
-  updatePoints();
+  points-=5; updatePoints();
 
-  // Decide the skin to get
+  // Decide skin
   const roll=Math.random();
   let finalSkin;
   if(roll<0.6) finalSkin=colors[Math.floor(Math.random()*colors.length)];
@@ -175,13 +165,10 @@ casesBtn.addEventListener('click',()=>{
   else finalSkin='gold';
   ownedSkins.push(finalSkin);
 
-  // Show case animation
+  // Case animation
   caseOverlay.style.display='flex';
   const scrollSkins=[...colors,...rareColors,'gold','red','green','blue','yellow'];
-  let offset=0;
-  let speed=20;
-  const targetIndex=scrollSkins.indexOf(finalSkin)+Math.floor(Math.random()*5); // make it scroll past a bit
-  let frames=0;
+  let offset=0, speed=20, frames=0;
 
   function animateCase(){
     frames++;
@@ -195,9 +182,8 @@ casesBtn.addEventListener('click',()=>{
     }
 
     offset+=speed;
-    if(frames>100){ speed*=0.9; } // slow down
+    if(frames>100){ speed*=0.9; }
     if(speed<0.5){
-      // stop animation
       caseOverlay.style.display='none';
       currentSkin=finalSkin;
       updatePoints();
