--- a/index.html
+++ b/index.html
@@ -1,207 +1,205 @@
-document.write(`
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Snake — Chromebook</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Dragon Ball Fighting Game</title>
 <style>
-  :root{--bg:#000;--fg:#fff;--box:#111}
-  html,body{height:100%;margin:0;background:var(--bg);color:var(--fg);font-family:Arial,Helvetica,sans-serif}
-  .wrap{min-height:100%;display:flex;flex-direction:column;align-items:center;justify-content:center;gap:18px;padding:24px;box-sizing:border-box}
-  h1{margin:0;font-size:1.6rem}
-  .game-card{background:var(--box);border:2px solid var(--fg);padding:12px;border-radius:10px;display:inline-block}
-  .top-row{display:flex;align-items:center;gap:12px;justify-content:space-between;margin-bottom:10px}
-  #score{font-weight:700}
-  canvas{display:block;background:#0b0b0b;border-radius:6px}
-  .controls{font-size:0.9rem;opacity:0.9;margin-top:8px}
-  button{background:transparent;color:var(--fg);border:1px solid var(--fg);padding:6px 10px;border-radius:6px;cursor:pointer}
-  button:active{transform:translateY(1px)}
-  .small{font-size:0.9rem;opacity:0.9}
+  body {
+    background: url('https://i.imgur.com/0Z7vX3j.jpg') no-repeat center center fixed;
+    background-size: cover;
+    font-family: Arial, sans-serif;
+    color: white;
+    text-align: center;
+  }
+  #game {
+    position: relative;
+    width: 800px;
+    height: 400px;
+    margin: 50px auto;
+    border: 2px solid white;
+    background: rgba(0,0,0,0.5);
+    overflow: hidden;
+  }
+  .fighter {
+    position: absolute;
+    bottom: 0;
+    width: 100px;
+    height: 150px;
+    background-size: cover;
+    transition: all 0.2s;
+  }
+  #fighter1 { left: 50px; background-image: url('https://i.imgur.com/KkZxUqY.png'); }
+  #fighter2 { right: 50px; background-image: url('https://i.imgur.com/7y5kF0S.png'); transform: scaleX(-1); }
+  .health-bar {
+    position: absolute;
+    top: 10px;
+    width: 300px;
+    height: 20px;
+    background: red;
+  }
+  #health1 { left: 10px; }
+  #health2 { right: 10px; }
+  .attack, .super-attack {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    position: absolute;
+    display: none;
+  }
+  .attack { background: yellow; }
+  .super-attack { background: orange; width: 40px; height: 40px; }
 </style>
 </head>
 <body>
-  <div class="wrap">
-    <h1>Snake — small demo</h1>
-    <div class="game-card" role="application" aria-label="Snake game">
-      <div class="top-row">
-        <div class="small">Score: <span id="score">0</span></div>
-        <div style="display:flex;gap:8px;align-items:center">
-          <button id="restartBtn">Restart</button>
-          <div class="small" id="status">Playing</div>
-        </div>
-      </div>
-      <canvas id="game" width="300" height="300" tabindex="0"></canvas>
-      <div class="controls small">Controls: ↑↓←→ or WASD. Space = pause</div>
-    </div>
-    <div class="small" style="opacity:0.85">Tip: click the canvas then use the keys.</div>
-  </div>
+<h1>Dragon Ball Fighting Game</h1>
+<div id="game">
+  <div id="fighter1" class="fighter"></div>
+  <div id="fighter2" class="fighter"></div>
+  <div id="health1" class="health-bar"></div>
+  <div id="health2" class="health-bar"></div>
+  <div id="ki1" class="attack"></div>
+  <div id="ki2" class="attack"></div>
+  <div id="super1" class="super-attack"></div>
+  <div id="super2" class="super-attack"></div>
+</div>
+
+<audio id="punchSound" src="https://www.soundjay.com/human/sounds/punch-1.mp3"></audio>
+<audio id="kiSound" src="https://www.soundjay.com/misc/sounds/energy-blast-1.mp3"></audio>
+<audio id="superSound" src="https://www.soundjay.com/misc/sounds/explosion-1.mp3"></audio>
 
 <script>
-(() => {
-  const canvas = document.getElementById('game');
-  const ctx = canvas.getContext('2d');
-  const scoreEl = document.getElementById('score');
-  const statusEl = document.getElementById('status');
-  const restartBtn = document.getElementById('restartBtn');
+  const gameWidth = 800;
 
-  const CELL_SIZE = 15;            // pixel size of one cell
-  const COLS = canvas.width / CELL_SIZE; // 20
-  const ROWS = canvas.height / CELL_SIZE; // 20
-  const MOVE_INTERVAL = 120;      // ms between moves (speed)
+  let health1 = 100;
+  let health2 = 100;
 
-  let snake, dir, nextDir, food, timer, running, score;
+  const fighter1 = document.getElementById('fighter1');
+  const fighter2 = document.getElementById('fighter2');
 
-  function randPos() {
-    return { x: Math.floor(Math.random()*COLS), y: Math.floor(Math.random()*ROWS) };
-  }
+  const ki1 = document.getElementById('ki1');
+  const ki2 = document.getElementById('ki2');
+  const super1 = document.getElementById('super1');
+  const super2 = document.getElementById('super2');
 
-  function placeFood() {
-    let p;
-    do {
-      p = randPos();
-    } while (snake.some(s => s.x===p.x && s.y===p.y));
-    food = p;
-  }
+  const punchSound = document.getElementById('punchSound');
+  const kiSound = document.getElementById('kiSound');
+  const superSound = document.getElementById('superSound');
 
-  function startGame() {
-    snake = [{x:10,y:10},{x:9,y:10},{x:8,y:10}];
-    dir = {x:1,y:0}; // moving right
-    nextDir = dir;
-    score = 0;
-    placeFood();
-    running = true;
-    statusEl.textContent = 'Playing';
-    scoreEl.textContent = score;
-    if (timer) clearInterval(timer);
-    timer = setInterval(tick, MOVE_INTERVAL);
-    draw();
-  }
+  let pos1 = 50;
+  let pos2 = 650;
 
-  function pauseToggle() {
-    if (!running) return; // if not started, ignore
-    if (timer) { clearInterval(timer); timer = null; statusEl.textContent = 'Paused'; }
-    else { timer = setInterval(tick, MOVE_INTERVAL); statusEl.textContent = 'Playing'; }
-  }
+  document.addEventListener('keydown', (e) => {
+    // Fighter 1 movement & attacks
+    if (e.key === 'a') { pos1 -= 10; if(pos1 < 0) pos1 = 0; }
+    if (e.key === 'd') { pos1 += 10; if(pos1 > gameWidth - 100) pos1 = gameWidth - 100; }
+    if (e.key === 'w') { punch(fighter1, 'fighter2'); }
+    if (e.key === 's') { shootKi(ki1, fighter1, 'right'); }
+    if (e.key === 'q') { superAttack(super1, fighter1, 'right'); }
 
-  function gameOver() {
-    running = false;
-    if (timer) { clearInterval(timer); timer = null; }
-    statusEl.textContent = 'Game Over';
-    // flash effect
-    ctx.fillStyle = 'rgba(255,255,255,0.06)';
-    ctx.fillRect(0,0,canvas.width,canvas.height);
-  }
+    // Fighter 2 movement & attacks
+    if (e.key === 'ArrowLeft') { pos2 -= 10; if(pos2 < 0) pos2 = 0; }
+    if (e.key === 'ArrowRight') { pos2 += 10; if(pos2 > gameWidth - 100) pos2 = gameWidth - 100; }
+    if (e.key === 'ArrowUp') { punch(fighter2, 'fighter1'); }
+    if (e.key === 'ArrowDown') { shootKi(ki2, fighter2, 'left'); }
+    if (e.key === 'Enter') { superAttack(super2, fighter2, 'left'); }
 
-  function tick() {
-    // apply buffered direction change (prevents 180-turn)
-    if ((nextDir.x !== -dir.x || nextDir.y !== -dir.y) || snake.length===1) dir = nextDir;
-
-    const head = {x: snake[0].x + dir.x, y: snake[0].y + dir.y};
-
-    // wrap-around (optional). Use wrap; if you want wall collision, change to gameOver on out-of-bounds.
-    function tick() {
-  // apply buffered direction change (prevents 180-turn)
-  if ((nextDir.x !== -dir.x || nextDir.y !== -dir.y) || snake.length===1) dir = nextDir;
-
-  const head = {x: snake[0].x + dir.x, y: snake[0].y + dir.y};
-
-  // wall collision check
-  if (head.x < 0 || head.x >= COLS || head.y < 0 || head.y >= ROWS) {
-    gameOver();
-    draw();
-    return;
-  }
-
-  // collision with self?
-  if (snake.some(s => s.x===head.x && s.y===head.y)) { 
-    gameOver(); 
-    draw(); 
-    return; 
-  }
-
-  snake.unshift(head);
-
-  // eat food?
-  if (head.x===food.x && head.y===food.y) {
-    score += 1;
-    scoreEl.textContent = score;
-    placeFood();
-  } else {
-    snake.pop();
-  }
-
-  draw();
-}
-
-
-    // collision with self?
-    if (snake.some(s => s.x===head.x && s.y===head.y)) { gameOver(); draw(); return; }
-
-    snake.unshift(head);
-
-    // eat food?
-    if (head.x===food.x && head.y===food.y) {
-      score += 1;
-      scoreEl.textContent = score;
-      placeFood();
-    } else {
-      snake.pop();
-    }
-
-    draw();
-  }
-
-  function draw() {
-    // background
-    ctx.fillStyle = '#000';
-    ctx.fillRect(0,0,canvas.width,canvas.height);
-
-    // grid optional faint (disabled for cleaner look)
-    // ctx.strokeStyle = '#0f0f0f';
-    // for (let x=0;x<=COLS;x++){ctx.beginPath();ctx.moveTo(x*CELL_SIZE,0);ctx.lineTo(x*CELL_SIZE,canvas.height);ctx.stroke()}
-    // for (let y=0;y<=ROWS;y++){ctx.beginPath();ctx.moveTo(0,y*CELL_SIZE);ctx.lineTo(canvas.width,y*CELL_SIZE);ctx.stroke()}
-
-    // draw food
-    ctx.fillStyle = '#e74c3c';
-    ctx.fillRect(food.x*CELL_SIZE+2, food.y*CELL_SIZE+2, CELL_SIZE-4, CELL_SIZE-4);
-
-    // draw snake
-    for (let i=0;i<snake.length;i++){
-      const s = snake[i];
-      // gradient from head to tail
-      const t = i/(snake.length||1);
-      const shade = Math.round(220 - t*140); // 220 -> 80
-      ctx.fillStyle = 'rgb('+shade+','+shade+','+shade+')';
-      ctx.fillRect(s.x*CELL_SIZE+1, s.y*CELL_SIZE+1, CELL_SIZE-2, CELL_SIZE-2);
-      // head accent
-      if (i===0) {
-        ctx.fillStyle = '#fff';
-        ctx.fillRect(s.x*CELL_SIZE+4, s.y*CELL_SIZE+4, CELL_SIZE-8, CELL_SIZE-8);
-      }
-    }
-  }
-
-  // keyboard input
-  window.addEventListener('keydown', (e) => {
-    const k = e.key;
-    if (!running && k !== ' ') return;
-    if (k === 'ArrowUp' || k==='w' || k==='W') nextDir = {x:0,y:-1};
-    else if (k === 'ArrowDown' || k==='s' || k==='S') nextDir = {x:0,y:1};
-    else if (k === 'ArrowLeft' || k==='a' || k==='A') nextDir = {x:-1,y:0};
-    else if (k === 'ArrowRight' || k==='d' || k==='D') nextDir = {x:1,y:0};
-    else if (k === ' '){ e.preventDefault(); pauseToggle(); }
+    updatePositions();
   });
 
-  // ensure canvas is focusable and focused so keys work on first click
-  canvas.addEventListener('click', ()=>{ canvas.focus(); });
-  canvas.setAttribute('tabindex','0');
+  function updatePositions() {
+    fighter1.style.left = pos1 + 'px';
+    fighter2.style.left = pos2 + 'px';
+  }
 
-  restartBtn.addEventListener('click', startGame);
+  function punch(fighter, target) {
+    const damage = Math.floor(Math.random() * 15) + 5;
+    punchSound.play();
 
-  // start automatically
-  startGame();
-})();
+    // Punch animation: move forward and back quickly
+    const originalPos = parseInt(fighter.style.left);
+    const offset = fighter === fighter1 ? 20 : -20;
+    fighter.style.left = originalPos + offset + 'px';
+    setTimeout(() => fighter.style.left = originalPos + 'px', 100);
+
+    hit(target, damage);
+  }
+
+  function shootKi(ki, fighter, direction) {
+    ki.style.display = 'block';
+    ki.style.top = fighter.offsetTop + 60 + 'px';
+    ki.style.left = fighter.offsetLeft + (direction === 'right' ? 100 : -20) + 'px';
+    kiSound.play();
+
+    let interval = setInterval(() => {
+      if (direction === 'right') ki.style.left = parseInt(ki.style.left) + 15 + 'px';
+      else ki.style.left = parseInt(ki.style.left) - 15 + 'px';
+
+      if ((direction === 'right' && parseInt(ki.style.left) >= pos2) ||
+          (direction === 'left' && parseInt(ki.style.left) <= pos1 + 100)) {
+        hit(direction === 'right' ? 'fighter2' : 'fighter1', Math.floor(Math.random() * 20) + 5);
+        ki.style.display = 'none';
+        clearInterval(interval);
+      }
+
+      if (parseInt(ki.style.left) > gameWidth || parseInt(ki.style.left) < 0) {
+        ki.style.display = 'none';
+        clearInterval(interval);
+      }
+    }, 20);
+  }
+
+  function superAttack(superEl, fighter, direction) {
+    superEl.style.display = 'block';
+    superEl.style.top = fighter.offsetTop + 50 + 'px';
+    superEl.style.left = fighter.offsetLeft + (direction === 'right' ? 100 : -40) + 'px';
+    superSound.play();
+
+    let interval = setInterval(() => {
+      if (direction === 'right') superEl.style.left = parseInt(superEl.style.left) + 25 + 'px';
+      else superEl.style.left = parseInt(superEl.style.left) - 25 + 'px';
+
+      if ((direction === 'right' && parseInt(superEl.style.left) >= pos2) ||
+          (direction === 'left' && parseInt(superEl.style.left) <= pos1 + 100)) {
+        hit(direction === 'right' ? 'fighter2' : 'fighter1', Math.floor(Math.random() * 35) + 15);
+        superEl.style.display = 'none';
+        clearInterval(interval);
+      }
+
+      if (parseInt(superEl.style.left) > gameWidth || parseInt(superEl.style.left) < 0) {
+        superEl.style.display = 'none';
+        clearInterval(interval);
+      }
+    }, 20);
+  }
+
+  function hit(fighter, damage) {
+    if (fighter === 'fighter1') {
+      health1 -= damage; if(health1 < 0) health1 = 0;
+      document.getElementById('health1').style.width = health1 * 3 + 'px';
+    } else {
+      health2 -= damage; if(health2 < 0) health2 = 0;
+      document.getElementById('health2').style.width = health2 * 3 + 'px';
+    }
+    checkWinner();
+  }
+
+  function checkWinner() {
+    if(health1 === 0) { alert('Fighter 2 Wins!'); resetGame(); }
+    if(health2 === 0) { alert('Fighter 1 Wins!'); resetGame(); }
+  }
+
+  function resetGame() {
+    health1 = 100;
+    health2 = 100;
+    pos1 = 50;
+    pos2 = 650;
+    updatePositions();
+    document.getElementById('health1').style.width = '300px';
+    document.getElementById('health2').style.width = '300px';
+  }
+
+  updatePositions();
 </script>
 </body>
 </html>
-`);
